# MagicstompSwitcher

./: .gitignore  CMakeLists.txt  README.md  aconnectwidget.cpp  aconnectwidget.h  alsafunc.cpp  alsafunc.h  currentpatchesmodel.cpp  currentpatchesmodel.h  delayclickablelabel.cpp  delayclickablelabel.h  doubleclickablelabel.cpp  doubleclickablelabel.h  gpiohandlerthread.cpp  gpiohandlerthread.h  magicstomp.h  main.cpp  mainwidget.cpp  mainwidget.h  midiportidalsa.cpp  midiportidalsa.h  msswitcherapp.cpp  msswitcherapp.h  msswitchersettings.cpp  msswitchersettings.h  msswitcherthread.cpp  msswitcherthread.h  preferencesdialog.cpp  preferencesdialog.h  ssd1306_display.cpp  ssd1306_display.h
systemd/: magicstompswitcher.service  splashscreen.service
